@@ -9,15 +9,6 @@ Supervisor is Copyright (c) 2006-2015 Agendaless Consulting and Contributors.
   MERCHANTABILITY, AGAINST INFRINGEMENT, AND FITNESS FOR A PARTICULAR
   PURPOSE.
 
-TrackRefs code Copyright (c) 2007 Zope Corporation and Contributors
-
-  This software is subject to the provisions of the Zope Public License,
-  Version 2.1 (ZPL). A copy of the ZPL should accompany this distribution.
-  THIS SOFTWARE IS PROVIDED "AS IS" AND ANY AND ALL EXPRESS OR IMPLIED
-  WARRANTIES ARE DISCLAIMED, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
-  WARRANTIES OF TITLE, MERCHANTABILITY, AGAINST INFRINGEMENT, AND FITNESS
-  FOR A PARTICULAR PURPOSE.
-
 medusa was (is?) Copyright (c) Sam Rushing.
 
 http_client.py code Copyright (c) by Daniel Krech, http://eikeon.com/.
